--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,24 +1,28 @@
-<script>
-  let currentdate = new Date(); console.log(currentdate);
-</script>
-
 <ul>
-  <form class="flex justify-between" action="/todos/add">
-    <input class="border rounded" type="text" placeholder="New todo.." />
-    <button class="bg-green-400 px-3 py-2 rounded" type="submit">Add</button>
+  <form class="flex justify-between" action="/todos/add" method="post">
+    <button class="bg-green-400 px-3 py-2 rounded w-full" type="submit">Add new
+      todo</button>
   </form>
-  <div class="flex justify-between">
+  <div class="flex justify-between my-4">
     <p>Sort by</p>
     <select name="" id="">
+      <option value="">Undone tasks</option>
       <option value="">Newest added</option>
       <option value="">Oldest added</option>
     </select>
   </div>
   {{#each todos}}
     <li class="flex justify-between border rounded mb-2 p-2">
+      {{#if done}}
+        <a class="line-through" href="/todo/{{id}}/done">{{description}}</a>
+      {{else}}
+        <a href="/todo/{{id}}/done">{{description}}</a>
 
-      <a href="/todo/{{id}}">{{description}}</a>
-      <a href="todos/{{id}}/edit">Edit</a>
+      {{/if}}
+      <div>
+        <a href="todos/{{id}}/edit">Edit</a>
+        <a href="todos/{{id}}/delete">Delete</a>
+      </div>
     </li>
   {{/each}}
 </ul>
