--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,11 +6,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Todo App</title>
   </head>
-  <body class="w-1/5 m-auto text-center">
-    <header class="my-4">
-      <h1 class="text-4xl font-bold">Todo App</h1>
-    </header>
+  <body class="w-2/5 m-auto text-center">
+    <div class="border p-5">
+      <header class="my-4 mb-8">
+        <h1 class="text-4xl font-bold">Todo App</h1>
+      </header>
 
-    {{{body}}}
+      {{{body}}}
+    </div>
   </body>
 </html>
