--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,6 @@
 <ul>
-  <form class="flex justify-between" action="/todos/add" method="post">
-    <button class="bg-green-400 px-3 py-2 rounded w-full" type="submit">Add new
-      todo</button>
-  </form>
+
+  <a class="bg-green-400 px-3 py-2 rounded w-full" href="/newTodo">Add new todo</a>
   <div class="flex justify-between my-4">
     <p>Sort by</p>
     <select name="" id="">
