--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,5 +1,5 @@
 <h2>Add new todo</h2>
-<form action="/todos/add" method="post">
+<form action="/add" method="post">
   <input class="border" type="text" name="description" />
   <input type="submit" value="Add" />
 </form>
