--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,16 +3,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Todo App</title>
   </head>
-  <body class="w-2/5 m-auto text-center">
-    <div class="border p-5">
-      <header class="my-4 mb-8">
-        <h1 class="text-4xl font-bold">Todo App</h1>
-      </header>
+  <body class="flex items-center bg-gradient-to-b from-red-100 via-rose-50 to-white">
+    <div class="w-96 m-auto bg-white rounded-3xl p-8">
+      {{>header}}
 
       {{{body}}}
+
+      {{>footer}}
     </div>
   </body>
 </html>
