--- a/views/todos-completed.hbs
+++ b/views/todos-completed.hbs
@@ -1,14 +1,15 @@
 <!-- Tabs -->
 <ul id="tabs" class="inline-flex justify-center w-full px-1 pt-2">
-  <li
-    class="px-4 py-2 -mb-px font-semibold border-b-2 border-blue-400 rounded-t opacity-100"
-  ><a id="default-tab" href="/">All</a></li>
+  <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
+      id="default-tab"
+      href="/"
+    >All</a></li>
   <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
       href="/todos-incompleted"
     >Incompleted</a></li>
-  <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
-      href="/todos-completed"
-    >Completed</a></li>
+  <li
+    class="px-4 py-2 -mb-px font-semibold border-b-2 border-blue-400 rounded-t opacity-100"
+  ><a href="/todos-completed">Completed</a></li>
 </ul>
 <div class="flex justify-between items-center my-4">
   <div>
@@ -26,13 +27,12 @@
 
 <ul>
   {{#each todos}}
-    <li class="flex justify-between bg-rose-100 rounded mb-2 p-2">
-      {{#if done}}
+    {{#if done}}
+      <li class="flex justify-between bg-rose-100 rounded mb-2 p-2">
         <a class="line-through" href="/todo/{{id}}/edit">{{description}}</a>
-      {{else}}
-        <a href="/todo/{{id}}/edit">{{description}}</a>
-
-      {{/if}}
-    </li>
+      </li>
+    {{/if}}
   {{/each}}
 </ul>
+
+{{! px-4 py-2 -mb-px font-semibold text-white border-b-2 border-blue-400 rounded-t opacity-100 }}
