--- a/views/todos-incompleted.hbs
+++ b/views/todos-incompleted.hbs
@@ -1,11 +1,12 @@
 <!-- Tabs -->
 <ul id="tabs" class="inline-flex justify-center w-full px-1 pt-2">
+  <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
+      id="default-tab"
+      href="/"
+    >All</a></li>
   <li
     class="px-4 py-2 -mb-px font-semibold border-b-2 border-blue-400 rounded-t opacity-100"
-  ><a id="default-tab" href="/">All</a></li>
-  <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
-      href="/todos-incompleted"
-    >Incompleted</a></li>
+  ><a href="/todos-incompleted">Incompleted</a></li>
   <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
       href="/todos-completed"
     >Completed</a></li>
@@ -26,13 +27,10 @@
 
 <ul>
   {{#each todos}}
-    <li class="flex justify-between bg-rose-100 rounded mb-2 p-2">
-      {{#if done}}
-        <a class="line-through" href="/todo/{{id}}/edit">{{description}}</a>
-      {{else}}
+    {{#if done}}{{else}}
+      <li class="flex justify-between bg-rose-100 rounded mb-2 p-2">
         <a href="/todo/{{id}}/edit">{{description}}</a>
-
-      {{/if}}
-    </li>
+      </li>
+    {{/if}}
   {{/each}}
 </ul>
