--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,5 +1,15 @@
-<h2>Add new todo</h2>
-<form action="/add" method="post">
-  <input class="border" type="text" name="description" />
-  <input type="submit" value="Add" />
-</form>
+<div class="bg-gray-100 p-4 rounded-lg">
+  <h2 class="text-center text-2xl mb-2">Add new todo</h2>
+  <form class="flex" action="/add" method="post">
+    <input
+      class="border grow p-2 rounded-l-lg"
+      type="text"
+      name="description"
+    />
+    <input
+      class="bg-emerald-400 grow p-2 rounded-r-lg"
+      type="submit"
+      value="Add"
+    />
+  </form>
+</div>
