--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
     <title>Todo App</title>
   </head>
   <body class="flex items-center bg-gradient-to-b from-red-100 via-rose-50 to-white">
-    <div class="w-96 m-auto bg-white rounded-3xl p-8">
+    <div class="w-96 m-auto bg-white rounded-3xl pt-8 pb-4 px-8">
       {{>header}}
 
       {{{body}}}
