--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,11 @@
-<div class="flex justify-between text-center rounded p-1 text-sm">
-  <a href="https://github.com/ckrook/node_inl1" target="_blank">
+<div
+  class="flex justify-between text-center rounded pt-2 text-gray-600 text-sm"
+>
+  <a
+    class="underline"
+    href="https://github.com/ckrook/node_inl1"
+    target="_blank"
+  >
     View Github repo
   </a>
   <p>
