--- a/views/delete.hbs
+++ b/views/delete.hbs
@@ -1,6 +1,13 @@
-<h2>Are you sure you want to delete this todo?</h2>
+<h2 class="mb-2">Are you sure you want to delete this todo?</h2>
 
-<form action="/todos/{{todo.id}}/delete" method="post">
-  {{todo.description}}
-  <input class="border p-2" type="submit" value="Delete" />
-</form>
+<div class="flex items-center space-x-2">
+  <form
+    class="text-center bg-rose-500 m-0 p-2 rounded-lg grow"
+    action="/todo/{{todo.id}}/delete"
+    method="post"
+  >
+    <input class="" type="submit" value="Delete" />
+  </form>
+  <p>or..</p>
+  <a class="bg-emerald-500 p-2 rounded-lg" href="/">Go back</a>
+</div>
