--- a/views/todos-completed.hbs
+++ b/views/todos-completed.hbs
@@ -5,23 +5,26 @@
       href="/"
     >All</a></li>
   <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
-      href="/todos-incompleted"
+      href="/todos/incompleted"
     >Incompleted</a></li>
   <li
     class="px-4 py-2 -mb-px font-semibold border-b-2 border-blue-400 rounded-t opacity-100"
-  ><a href="/todos-completed">Completed</a></li>
+  ><a href="/todos/completed">Completed</a></li>
 </ul>
-<div class="flex justify-between items-center my-4">
-  <div>
-    <a
-      class="bg-emerald-500 text-white px-3 py-2 rounded w-full"
-      href="/newTodo"
-    >Add new todo</a>
-  </div>
-  <div class="flex">
-    <p>Sort by:</p>
-    <a href="/todos/asc">Oldest</a>
-    <a href="/todos/asc">Newest</a>
+<div class="my-2 pr-2 rounded-lg text-sm">
+  <div class="flex justify-between items-center py-2">
+    <div>
+      <a
+        class="bg-emerald-500 text-white px-3 py-2 rounded w-full"
+        href="/newTodo"
+      >Add new todo</a>
+    </div>
+    <div class="flex space-x-1 justify-around text-gray-700">
+      <p>Sort by:</p>
+      <a class="underline text-gray-900" href="/sort/asc">Oldest</a>
+      <p>or</p>
+      <a class="underline text-gray-900" href="/todos/desc">Newest</a>
+    </div>
   </div>
 </div>
 
