--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,6 @@
 html {
   /* font-family: "Inter", "Bitstream Vera Serif", serif !important; */
 }
-.on {
+.true {
   text-decoration: line-through;
 }
