--- a/views/todos-completed.hbs
+++ b/views/todos-completed.hbs
@@ -21,7 +21,7 @@
     </div>
     <div class="flex space-x-1 justify-around text-gray-700">
       <p>Sort by:</p>
-      <a class="underline text-gray-900" href="/sort/asc">Oldest</a>
+      <a class="underline text-gray-900" href="/todos/asc">Oldest</a>
       <p>or</p>
       <a class="underline text-gray-900" href="/todos/desc">Newest</a>
     </div>
