--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,13 +1,13 @@
-<div class="bg-gray-100 p-4 rounded-lg">
-  <h2 class="text-center text-2xl mb-2">Add new todo</h2>
+<div class="bg-gray-100 px-4 pb-2 pt-4 rounded-lg">
+  <h2 class="text-center text-lg mb-2">Add new todo</h2>
   <form class="flex" action="/add" method="post">
     <input
-      class="border grow p-2 rounded-l-lg"
+      class="border grow p-1 rounded-l-md"
       type="text"
       name="description"
     />
     <input
-      class="bg-emerald-400 grow p-2 rounded-r-lg"
+      class="bg-emerald-400 grow p-1 rounded-r-md"
       type="submit"
       value="Add"
     />
