--- a/views/todos-completed.hbs
+++ b/views/todos-completed.hbs
@@ -5,11 +5,11 @@
       href="/"
     >All</a></li>
   <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
-      href="/todos/incompleted"
+      href="/incompleted"
     >Incompleted</a></li>
   <li
     class="px-4 py-2 -mb-px font-semibold border-b-2 border-blue-400 rounded-t opacity-100"
-  ><a href="/todos/completed">Completed</a></li>
+  ><a href="/completed">Completed</a></li>
 </ul>
 <div class="my-2 pr-2 rounded-lg text-sm">
   <div class="flex justify-between items-center py-2">
@@ -32,7 +32,7 @@
   {{#each todos}}
     {{#if done}}
       <li class="flex justify-between bg-rose-100 rounded mb-2 p-2">
-        <a class="line-through" href="/todo/{{id}}/edit">{{description}}</a>
+        <a class="line-through" href="/{{_id}}/edit">{{description}}</a>
       </li>
     {{/if}}
   {{/each}}
