--- a/views/todos-incompleted.hbs
+++ b/views/todos-incompleted.hbs
@@ -6,9 +6,9 @@
     >All</a></li>
   <li
     class="px-4 py-2 -mb-px font-semibold border-b-2 border-blue-400 rounded-t opacity-100"
-  ><a href="/todos/incompleted">Incompleted</a></li>
+  ><a href="/incompleted">Incompleted</a></li>
   <li class="px-4 py-2 font-semibold rounded-t opacity-50"><a
-      href="/todos/completed"
+      href="/completed"
     >Completed</a></li>
 </ul>
 <div class="my-2 pr-2 rounded-lg text-sm">
@@ -21,9 +21,9 @@
     </div>
     <div class="flex space-x-1 justify-around text-gray-700">
       <p>Sort by:</p>
-      <a class="underline text-gray-900" href="/todos/asc">Oldest</a>
+      <a class="underline text-gray-900" href="/asc">Oldest</a>
       <p>or</p>
-      <a class="underline text-gray-900" href="/todos/desc">Newest</a>
+      <a class="underline text-gray-900" href="/desc">Newest</a>
     </div>
   </div>
 </div>
@@ -31,7 +31,7 @@
   {{#each todos}}
     {{#if done}}{{else}}
       <li class="flex justify-between bg-rose-100 rounded mb-2 p-2">
-        <a href="/todo/{{id}}/edit">{{description}}</a>
+        <a href="/{{_id}}/edit">{{description}}</a>
       </li>
     {{/if}}
   {{/each}}
