--- a/views/delete.hbs
+++ b/views/delete.hbs
@@ -3,7 +3,7 @@
 <div class="flex items-center space-x-2">
   <form
     class="text-center bg-rose-500 m-0 p-2 rounded-lg grow"
-    action="/todo/{{todo.id}}/delete"
+    action="/{{todo._id}}/delete"
     method="post"
   >
     <input class="" type="submit" value="Delete" />
