--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Todo App</title>
   </head>
-  <body class="flex items-center bg-gradient-to-b from-red-100 via-rose-50 to-white">
+  <body class="flex items-center bg-gradient-to-b bg-red-100">
     <div class="w-96 m-auto bg-white rounded-3xl pt-8 pb-4 px-8">
       {{>header}}
 
